[tool.poetry]
name = "tdd-project"
version = "0.1.0"
description = ""
authors = ["Leonardo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
motor = "^3.7.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
